syntax="proto3";

package product;

service Product {
  rpc Save (ProductRequest) returns (ProductResponse);
  rpc GetProductList(Empty) returns (ProductListResponse);
}

message ProductRequest {
  string name = 1;
  string description = 2;
  string currency = 3;
  int64 price = 4;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  string current = 4;
  int64 price = 5;
}

message ProductListResponse {
  repeated ProductResponse products = 1;
}

message Empty {}